# aw-watcher-mic-status

./: README.md  pyproject.toml
aw_watcher_mic_status/: __main__.py  main.py
aw_watcher_mic_status/helper/: mic_checker.py
