[tool.poetry]
name = "aw-watcher-mic-status"
version = "0.0.1"
description = "Microphone Status Watcher for ActivityWatch"
authors = ["Zach Strout <zachstrout@gmail.com>"]
license = "MPL-2.0"
repository = "https://github.com/RTnhN/aw-watcher-mic-status"

[tool.poetry.scripts]
aw-watcher-mic-status = "aw_watcher_mic_status:main"

[tool.poetry.dependencies]
python = "^3.7"
aw-client = "^0.5.7"
psutil = "^7.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
